tests/lang/compile_fail/nested_type_multi_segment.kojs
struct Owner
  struct Foo.Bar
    y: Int
  end
end

1.print()
